# beatsnp

./: .gitignore  CMakeLists.txt  build_and_run.sh
data/: qqq_avg_price-30-w.csv
include/: financial_metrics.h  price_reader.h
src/: financial_metrics.cpp  main.cpp  price_reader.cpp
